@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.245 2005/04/28 13:09:13 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.246 2005/04/28 13:46:48 rocket Exp $
+
+  28 Apr 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py, modules/livecd_stage2_target.py:
+  print warning message about deprecated use of cdfstype
 
   28 Apr 2005; Eric Edgar <rocket@gentoo.org>
   targets/support/chroot-functions.sh:
